tests/ui/coherence/orphan-check-projections-not-covering-multiple-params.next.stderr
error[E0210]: type parameter `T` must be covered by another type when it appears before the first local type (`LocalTy`)
  --> $DIR/orphan-check-projections-not-covering-multiple-params.rs:16:6
   |
LL | impl<T, U> foreign::Trait0<LocalTy, T, U> for <() as Trait<T, U>>::Assoc {}
   |      ^ type parameter `T` must be covered by another type when it appears before the first local type (`LocalTy`)
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local, and no uncovered type parameters appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<..> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error[E0210]: type parameter `U` must be covered by another type when it appears before the first local type (`LocalTy`)
  --> $DIR/orphan-check-projections-not-covering-multiple-params.rs:16:9
   |
LL | impl<T, U> foreign::Trait0<LocalTy, T, U> for <() as Trait<T, U>>::Assoc {}
   |         ^ type parameter `U` must be covered by another type when it appears before the first local type (`LocalTy`)
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local, and no uncovered type parameters appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<..> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0210`.
